<resources>

    <string name="app_name">Toto</string>

    <!-- settings -->
    <string name="action_settings">Settings</string>

    <!-- show image pref -->
    <string name="pref_show_image">show_image</string>
    <string name="pref_show_image_default">true</string>
    <string name="pref_show_image_summary">Determine if the app loads images.</string>
    <string name="pref_show_image_title">Show feed images </string>

    <!-- auto refresh pref -->
    <string name="pref_auto_refresh">auto_refresh</string>
    <string name="pref_auto_refresh_default">true</string>
    <string name="pref_auto_refresh_summary">Determine if the app auto refreshes feeds.</string>
    <string name="pref_auto_refresh_title">Auto refresh feeds</string>

    <!-- refresh pref -->
    <string name="pref_refresh_rate">refresh_rate</string>
    <string name="pref_refresh_rate_default">60</string>
    <string name="pref_refresh_rate_summary">Determine feeds refresh rate.</string>
    <string name="pref_refresh_rate_title">Feed refresh rate</string>

    <string-array name="pref_refresh_rate_elements">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
    </string-array>

    <string-array name="pref_refresh_rate_elements_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
    </string-array>

    <!-- add feed -->
    <string name="action_add_feed">Add feed</string>
    <string name="action_refresh">Refresh</string>
    <string name="add_feed_title">Enter the feed title</string>
    <string name="add_feed_url">Enter the website or feed link</string>

    <string name="check_link_button">Check</string>
    <string name="make_feed_button">Make feed</string>
    <string name="cancel_feed_button">Cancel</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_delete">Delete feed</string>

</resources>
